--- a/starter_code/stylesheets/style.css
+++ b/starter_code/stylesheets/style.css
@@ -4,4 +4,421 @@ button-purple: #192592
 main-titles dark-grey: #2C303F;
 paragraph grey: #5b5e6d;
 nav grey: #5b5e6d;
+font-family: 'Montserrat', sans-serif;
+font-family: 'Libre Baskerville', serif;
 */
+
+* {
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  font-family: "Montserrat", sans-serif;
+}
+
+nav {
+  height: 70px;
+  background-color: #fff;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  box-sizing: border-box;
+}
+
+.nav-container {
+  height: 100%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  width: 83%;
+  /* border: 2px solid red;  */
+  color: #5b5e6d;
+}
+
+.nav-listitem {
+  cursor: pointer;
+  padding: 1rem;
+  line-height: 1.2;
+  box-sizing: border-box;
+}
+
+.nav-listitem span:hover {
+  font-weight: 700;
+}
+
+.logo-container {
+  height: 80%;
+}
+
+.logo-container img {
+  height: 100%;
+}
+
+nav ul {
+  width: 100%;
+  display: flex;
+  list-style-type: none;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.nav-btn-right {
+  margin-left: auto;
+  /* justify-self: end; */
+  color: green;
+  /* box-sizing: border-box; */
+}
+
+.nav-btn-right button {
+  cursor: pointer;
+  /* height: 90%; */
+  font-size: 1rem;
+  font-family: "Montserrat", sans-serif;
+  padding: 10px;
+  border: 3px solid #a8a9b0;
+  color: #5b5e6d;
+  background: transparent;
+  border-radius: 5px;
+  line-height: 1.2;
+  /* box-sizing: border-box; */
+}
+
+.nav-btn-right button:hover {
+  /* font-weight: 700; */
+  border: 4px solid #5b5e6d;
+}
+
+.dropdown {
+  /* width: 190px; */
+  position: absolute;
+  border-radius: 5px;
+  padding: 0.5em;
+  border: 0.5px solid #e2e2e6;
+  background: white;
+  display: flex;
+  flex-direction: column;
+  visibility: hidden;
+  opacity: 0;
+  /* transition: all 0.5s ease; */
+  margin-top: 1rem;
+  -webkit-box-shadow: 0 0 5px 2px rgba(19, 19, 19, 0.062);
+  -moz-box-shadow: 0 0 5px 2px rgba(19, 19, 19, 0.062);
+  box-shadow: 0 0 5px 2px rgba(19, 19, 19, 0.062);
+}
+
+.dropdown h4 {
+  text-transform: uppercase;
+  font-size: 0.8em;
+  margin: 0;
+  font-weight: 300;
+  padding: 0.8em;
+}
+
+.dropdown ul {
+  padding: 0;
+  width: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+}
+
+.dropdown ul li {
+  height: 100%;
+  font-size: 0.85em;
+  font-weight: 600;
+  padding: 0.8em 100px 0.8em 0.8em;
+}
+
+.dropdown ul li:hover {
+  background: rgb(238, 237, 237);
+  border-radius: 2%;
+}
+
+.row2 {
+  display: flex;
+}
+
+.nav-listitem:hover > .dropdown,
+.dropdown:hover {
+  visibility: visible;
+  opacity: 1;
+  /* display: block; */
+}
+
+header {
+  width: 100%;
+}
+
+.header-container {
+  padding-top: 10rem;
+  padding-bottom: 4rem;
+  /* border: 2px solid red; */
+  display: flex;
+  justify-content: space-around;
+}
+
+.header-left,
+.header-right {
+  /* border: 3px solid green; */
+  width: 45%;
+}
+
+.header-right {
+  padding-right: 12%;
+  box-sizing: border-box;
+}
+
+.header-right h1 {
+  color: #1b1d25;
+  font-weight: 600;
+  font-family: "times new roman", "Libre Baskerville", serif;
+  font-size: 4.8rem;
+  margin: 0;
+}
+
+.paragraph {
+  font-weight: 500;
+  font-size: 1.1rem;
+  color: #5b5e6d;
+  line-height: 1.5;
+}
+
+.header-right button {
+  background: #3f46ad;
+  color: white;
+}
+
+.smalltext {
+  font-size: 0.8em;
+}
+
+.smalltext a {
+  color: #3f46ad;
+}
+
+.header-left img {
+  width: 100%;
+}
+
+main {
+  width: 100%;
+}
+
+.icon-container {
+  width: 70%;
+  height: 50px;
+  display: flex;
+  margin: 0 auto;
+  justify-content: space-between;
+}
+
+.main-container {
+  text-align: center;
+  width: 100%;
+}
+
+.main-container h2 {
+  color: #1d2131;
+  font-weight: 600;
+  font-family: "times new roman", "Libre Baskerville", serif;
+  font-size: 3em;
+}
+
+.btn {
+  font-weight: 600;
+  font-family: "Montserrat", sans-serif;
+  border: none;
+  padding: 1.6em 2.8em;
+  border-radius: 4px;
+  cursor: pointer;
+  box-sizing: border-box;
+  transition-delay: 0.01s;
+  transition-timing-function: linear;
+}
+
+.blue:hover {
+  border-radius: 1px;
+  padding: 1.5em 2.7em;
+  margin: 0.1em 0.1em;
+}
+
+.white:hover {
+  padding: 1.5em 2.7em;
+  border: 2px solid #3f46ad;
+}
+
+.white {
+  background: #fff;
+  color: #3f46ad;
+  border: 1px solid #3f46ad;
+  margin: 2em 0 3em 0;
+}
+
+.main-container .btn {
+}
+
+.icon-container img {
+  height: 50%;
+  width: auto;
+}
+
+/* .main-content{
+    margin-bottom: 5em;
+} */
+
+.bottom-call {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  background: #eeeff3;
+  padding: 0 10%;
+  box-sizing: border-box;
+}
+
+.bot-cal-left {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.bottom-call h3 {
+  font-size: 2em;
+  margin: 0em;
+  color: #1d2131;
+  font-weight: 600;
+  font-family: "times new roman", "Libre Baskerville", serif;
+}
+
+footer {
+  text-align: center;
+}
+
+.footlinks {
+  margin: 3em 10% 0;
+  width: 80%;
+  display: flex;
+  justify-content: flex-end;
+  flex-direction: row;
+}
+
+footer img {
+  margin-right: auto;
+  height: 100px;
+}
+
+footer ul {
+  list-style-type: none;
+}
+
+footer ul li:nth-of-type(1) {
+  cursor: default;
+  font-weight: 600;
+}
+
+.footlists li {
+  cursor: pointer;
+  line-height: 2.5em;
+  font-size: 0.8em;
+}
+
+.footlists li:hover {
+  color: #192592;
+}
+
+.hamburger-menu {
+  display: none;
+}
+
+@media only screen and (max-width: 908px) {
+  button,
+  p,
+  h2 {
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+
+  .nav-listitem,
+  .nav-btn-right {
+    display: none;
+  }
+  .hamburger-menu {
+    margin-left: auto;
+    display: block;
+    cursor: pointer;
+    font-size: 1.4rem;
+    color: rgb(25, 22, 32);
+  }
+
+  .header-container {
+    /* padding: 0; */
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap-reverse;
+    padding-top: 5rem;
+    padding-bottom: 4rem;
+  }
+
+  .header-right {
+    padding: 0px 10px;
+    width: 100%;
+    text-align: center;
+  }
+
+  .header-left {
+    width: 40%;
+  }
+
+  .icon-container {
+    flex-wrap: wrap;
+  }
+
+  .icon-container img {
+    height: 30%;
+    margin: 3px;
+  }
+
+  /* qend */
+}
+
+@media only screen and (max-width: 700px) {
+  body {
+    text-align: center;
+  }
+
+  .paragraph {
+    padding: 5px;
+    font-size: 0.9rem;
+  }
+
+  .btn {
+    width: 100%;
+  }
+  .white {
+    padding: 1.4em 2.6em;
+    width: 90%;
+    margin: 0 5%;
+  }
+  .footlinks img {
+    display: none;
+  }
+
+  .bottom-call {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex-wrap: wrap;
+    padding: 5%;
+  }
+  .bottom-call h3 {
+    font-size: 1.8rem;
+  }
+
+  .icon-container {
+    padding: 10px 0px;
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+  }
+}
